--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "[javascript]": {
         "editor.formatOnSave": true
     },
-    "files.autoSave": "off"
+    "files.autoSave": "afterDelay"
 }
