--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "wishta",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
+    "start": "npx functions-framework --target=server --port=3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/functions-framework": "^1.9.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
