--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 API_VERSION=/api/v1
+PORT=3200
+DATABASE=mongodb+srv://<USER>:<PASSWORD>@cluster0.pmm8p.mongodb.net/wishta?retryWrites=true&w=majority
+DATABASE_USER=wishta
+DATABASE_PASSWORD=g2dhv8p3t3rhcehb
