add error handler

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 API_VERSION=/api/v1
 PORT=3200
 DATABASE=mongodb+srv://<USER>:<PASSWORD>@cluster0.pmm8p.mongodb.net/wishta?retryWrites=true&w=majority
