add validate schema

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "start": "npx functions-framework --target=server --port=3000",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "app:dev": "nodemon server.js",
+    "app:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "",
   "license": "ISC",
