--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 NODE_ENV=development
 API_VERSION=/api/v1
 PORT=3200
+
 DATABASE=mongodb+srv://<USER>:<PASSWORD>@cluster0.pmm8p.mongodb.net/wishta?retryWrites=true&w=majority
 DATABASE_USER=wishta
 DATABASE_PASSWORD=g2dhv8p3t3rhcehb
+
+JWT_SECRET=HVZrSrzbtCFb9tNbjcaNW4wLDAZAvAu4cCen
+JWT_EXPIRES_IN=1d
+JWT_COOKIE_EXPIRES_IN=90
