--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google-cloud/functions-framework": "^1.9.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "validator": "^13.7.0"
