--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ DATABASE_PASSWORD=g2dhv8p3t3rhcehb
 JWT_SECRET=HVZrSrzbtCFb9tNbjcaNW4wLDAZAvAu4cCen
 JWT_EXPIRES_IN=1d
 JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USERNAME=90e5e05cc6a951
+EMAIL_PASSWORD=1a34905aa71e9b
