--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
