--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": ">=8.3.0"
+    "node": "^15"
   },
   "scripts": {
     "start": "npx functions-framework --target=server --port=3000",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^1.9.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
