--- a/.env
+++ b/.env
@@ -7,14 +7,15 @@ DATABASE_USER=wishta
 DATABASE_PASSWORD=g2dhv8p3t3rhcehb
 
 ACCESS_JWT_SECRET=HVZrSrzbtCFb9tNbjcaNW4wLDAZAvAu4cCen
-ACCESS_JWT_EXPIRES_IN=1d
-ACCESS_JWT_COOKIE_EXPIRES_IN=90
+ACCESS_JWT_EXPIRES_IN=15m
 
 REFRESH_JWT_SECRET=pkwwCkx5GbniWmRI8aPcrW4XUdGthe1D
-REFRESH_JWT_EXPIRES_IN=1d
+REFRESH_JWT_EXPIRES_IN=90d
 REFRESH_JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USERNAME=90e5e05cc6a951
 EMAIL_PASSWORD=1a34905aa71e9b
+
+CORS_ORIGIN=http://localhost:8080,http://kanda.fun
