--- a/.env
+++ b/.env
@@ -7,10 +7,12 @@ DATABASE_USER=wishta
 DATABASE_PASSWORD=g2dhv8p3t3rhcehb
 
 ACCESS_JWT_SECRET=HVZrSrzbtCFb9tNbjcaNW4wLDAZAvAu4cCen
-ACCESS_JWT_EXPIRES_IN=15m
+ACCESS_JWT_EXPIRES_IN=900000
+#value in milisecond or 15m
 
 REFRESH_JWT_SECRET=pkwwCkx5GbniWmRI8aPcrW4XUdGthe1D
-REFRESH_JWT_EXPIRES_IN=90d
+REFRESH_JWT_EXPIRES_IN=7776000000
+#value in milisecond or 90d
 REFRESH_JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_HOST=smtp.mailtrap.io
