--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ EMAIL_PORT=2525
 EMAIL_USERNAME=90e5e05cc6a951
 EMAIL_PASSWORD=1a34905aa71e9b
 
-CORS_ORIGIN=http://localhost:8080,http://kanda.fun
+CORS_ORIGIN=http://localhost:8080,http://kanda.fun,http://localhost:9090
