add multer and config it

--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ DATABASE_USER=wishta
 DATABASE_PASSWORD=g2dhv8p3t3rhcehb
 
 ACCESS_JWT_SECRET=HVZrSrzbtCFb9tNbjcaNW4wLDAZAvAu4cCen
-ACCESS_JWT_EXPIRES_IN=900000
-#value in milisecond or 15m
+ACCESS_JWT_EXPIRES_IN=24h
+#value ACCESS_JWT_EXPIRES_IN in milisecond or 15m
 
 REFRESH_JWT_SECRET=pkwwCkx5GbniWmRI8aPcrW4XUdGthe1D
 REFRESH_JWT_EXPIRES_IN=7776000000
-#value in milisecond or 90d
+#value REFRESH_JWT_EXPIRES_IN in milisecond or 90d
 REFRESH_JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_HOST=smtp.mailtrap.io
@@ -21,3 +21,7 @@ EMAIL_USERNAME=90e5e05cc6a951
 EMAIL_PASSWORD=1a34905aa71e9b
 
 CORS_ORIGIN=http://localhost:8080,http://kanda.fun,http://localhost:9090
+
+STORAGE_KEY=
+MAX_FILE_UPLOAD_SIZE_BYTE=5242880
+#https://www.gbmb.org/mb-to-bytes
