--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/functions-framework": "^1.9.0",
+    "@google-cloud/storage": "^5.18.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "validator": "^13.7.0"
   },
