setting env for storage

--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ EMAIL_PASSWORD=1a34905aa71e9b
 
 CORS_ORIGIN=http://localhost:8080,http://kanda.fun,http://localhost:9090
 
-STORAGE_KEY=
 MAX_FILE_UPLOAD_SIZE_BYTE=5242880
 #https://www.gbmb.org/mb-to-bytes
+STORAGE_KEY_DIRECTORY=../keys/wishta-storage.json
+STORAGE_BUCKET_NAME=wishta
