--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ NODE_ENV=development
 API_VERSION=/api/v1
 PORT=3200
 
-DATABASE=mongodb+srv://<USER>:<PASSWORD>@cluster0.pmm8p.mongodb.net/wishta?retryWrites=true&w=majority
+DATABASE=mongodb+srv://<USER>:<PASSWORD>@cluster0.pmm8p.mongodb.net/<DATABASE_NAME>?retryWrites=true&w=majority
+DATABASE_NAME=wishta
 DATABASE_USER=wishta
 DATABASE_PASSWORD=g2dhv8p3t3rhcehb
 
